[gd_scene load_steps=8 format=2]

[ext_resource path="res://ball.svg" type="Texture" id=1]
[ext_resource path="res://bar.svg" type="Texture" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://Roboto/Roboto-Black.ttf" type="DynamicFontData" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 254.0

[sub_resource type="CircleShape2D" id=2]
radius = 33.541

[sub_resource type="DynamicFont" id=3]
size = 27
outline_size = 3
outline_color = Color( 0.203922, 0.65098, 0.992157, 1 )
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
position = Vector2( 0, 2 )
script = ExtResource( 3 )

[node name="LeftBar" type="Area2D" parent="."]
position = Vector2( 52, 295 )

[node name="Sprite" type="Sprite" parent="LeftBar"]
position = Vector2( 116, 2.00003 )
scale = Vector2( 0.464062, 0.457813 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBar"]
position = Vector2( 19, -1 )
shape = SubResource( 1 )

[node name="RightBar" type="Area2D" parent="."]
position = Vector2( 971, 298 )

[node name="Sprite" type="Sprite" parent="RightBar"]
position = Vector2( 115, -1.00002 )
scale = Vector2( 0.464062, 0.459375 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBar"]
position = Vector2( -18, 0 )
shape = SubResource( 1 )

[node name="Ball" type="KinematicBody2D" parent="."]
position = Vector2( 530, 337 )

[node name="Sprite" type="Sprite" parent="Ball"]
position = Vector2( 0, 2 )
rotation = 2.0176
scale = Vector2( 0.134, 0.134 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="ScoreLeft" type="RichTextLabel" parent="."]
margin_left = 1.0
margin_top = 23.0
margin_right = 116.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 58, 19 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]0"
text = "0"

[node name="ScoreRight" type="RichTextLabel" parent="."]
margin_left = 910.0
margin_top = 23.0
margin_right = 1025.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 58, 19 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]0"
text = "0"

[connection signal="body_entered" from="LeftBar" to="." method="touching_bar"]
[connection signal="body_entered" from="RightBar" to="." method="touching_bar"]
